[ADD] Se agrego todos los filtros y cambios en el diseño de la pagina principal y todas las que estan relacionadas con las vista de productos

--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -1424,7 +1424,7 @@ ol {
 	font-size: 18px;
 }
 
-.sidebar__filter a {
+.sidebar__filter button{
 	font-size: 14px;
 	color: #0d0d0d;
 	text-transform: uppercase;
@@ -1437,6 +1437,7 @@ ol {
 	right: 0;
 	bottom: -5px;
 	border-radius: 2px;
+	background-color: #ffffff;
 }
 
 .filter-range-wrap .range-slider .price-input {
@@ -3176,7 +3177,8 @@ ol {
 	.header__right__auth {
 		margin-right: 5px;
 	}
-	.sidebar__filter a {
+	.sidebar__filter button {
+		position: absolute;
 		padding: 5px 15px 5px 15px;
 	}
 	.nav::before {
@@ -3199,7 +3201,7 @@ ol {
 	.discount__text {
 		height: auto;
 	}
-	.sidebar__filter a {
+	.sidebar__filter button {
 		position: relative;
 		bottom: 0;
 	}
